--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         <span class="text-transparent bg-clip-text bg-gradient-to-r from-brand-600 to-accent-red">Modern Pokémon Sets</span>
                     </h1>
                     <p class="mt-4 max-w-2xl mx-auto text-xl text-slate-500 mb-10">
-                        Stop guessing. Start collecting smarter. Instant access to pull rates for English, German, Japanese, and Korean sets from 2020 to today.
+                        Stop guessing. Start collecting smarter. Instant access to pull rates for English, German, Japanese, and Korean sets from Sword & Shield, Scarlet & Violet, and Mega Evolution series.
                     </p>
                     
                     <div class="relative max-w-xl mx-auto group">
@@ -149,8 +149,8 @@
                 <div class="inline-flex items-center justify-center w-16 h-16 rounded-full bg-slate-100 mb-4">
                     <svg class="w-8 h-8 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"></path></svg>
                 </div>
-                <h3 class="text-lg font-medium text-slate-900">Select a set to view Pull Rates</h3>
-                <p class="mt-1 text-slate-500">Search above or select a language to get started.</p>
+                <h3 class="text-lg font-medium text-slate-900">Loading Featured Sets...</h3>
+                <p class="mt-1 text-slate-500">Just a moment while we prepare the best sets for you.</p>
             </div>
         </div>
     </main>
