Update #2: New Feature, Corrected Set Names
- Corrected all Set Names
- New Feature: browse sets

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
                     <span class="font-bold text-xl tracking-tight text-slate-900">Poké<span class="text-brand-600">Rates</span></span>
                 </div>
                 <div class="hidden md:flex space-x-8 text-sm font-medium text-slate-500">
-                    <a href="#" class="hover:text-brand-600 transition-colors">Sets</a>
-                    <a href="#" class="hover:text-brand-600 transition-colors">Compare</a>
+                    <a href="#" onclick="event.preventDefault(); displayFeaturedSets();" class="hover:text-brand-600 transition-colors">Home</a>
+                    <a href="#" onclick="event.preventDefault(); displayBrowsePage();" class="hover:text-brand-600 transition-colors">Browse Sets</a>
                     <a href="#" class="hover:text-brand-600 transition-colors">About</a>
                 </div>
             </div>
