--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <input 
                                 type="text" 
                                 id="searchInput"
-                                placeholder="Search for a set (e.g., 'Fatale Flammen', '151', 'Evolving Skies')..." 
+                                placeholder="Search for a set (e.g., 'Stürmische Funken', '151', 'Evolving Skies')..." 
                                 class="block w-full rounded-xl border-0 py-4 pl-12 pr-4 text-slate-900 shadow-card placeholder:text-slate-400 focus:ring-2 focus:ring-brand-500 focus:outline-none text-lg bg-white"
                             >
                             <div class="absolute inset-y-0 left-0 pl-4 flex items-center pointer-events-none">
